--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
@@ -9,7 +9,7 @@ use Magento\Framework\View\Element\Template;
 
 <section
   id="ProductGridContainer"
-  class="content-wrapper animate-on-transition mx-auto pb-16"
+  class="content-wrapper animate-on-transition mx-auto"
   x-ref="ProductGridContainer"
   x-data="ProductList('')"
   key="ProductList-all"
