--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -26,7 +26,7 @@ use Magento\Framework\Escaper;
                 <div>
                     <a
                         href="<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>"
-                        @click.prevent="fetchAndReplaceContent('<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>')"
+                        x-element-transition-trigger
                         class="button button--outline-primary w-full md:w-auto"
                     >
                         <span>
@@ -57,7 +57,7 @@ use Magento\Framework\Escaper;
                 <div>
                     <a
                         href="<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>"
-                        @click.prevent="fetchAndReplaceContent('<?= $escaper->escapeUrl($block->getAddressEditUrl($customerDefaultBillingAddress)) ?>')"
+                        x-element-transition-trigger
                         class="button button--outline-primary w-full md:w-auto"
                     >
                         <span><?= $escaper->escapeHtml(__('Change shipping address')) ?></span>
