INTERNAL-46: Implement forgot password form using sessions

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -1,10 +1,4 @@
 <?php
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
 
 declare(strict_types=1);
 
@@ -27,10 +21,14 @@ $isAutocompleteEnabled = $storeConfig->getStoreConfig('customer/password/autocom
 
 $formId = 'user_forgotpassword';
 
+$errorMessage = $block->getErrorMessage();
+$successMessage = $block->getSuccessMessage();
+
 // Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
 // on the Magento_ReCaptchaCustomer module
 $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
+
 <div class="container mx-auto flex h-full items-center px-5 mt-16">
     <div class="mx-auto mb-16 w-[412px] max-w-full">
         <div class="flex items-center w-full justify-center" aria-labelledby="block-customer-login-heading">
@@ -38,9 +36,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                   method="post"
                   class="w-full"
                   id="<?= $escaper->escapeHtmlAttr($formId) ?>"
-                  x-data="Authentication('<?= $escaper->escapeHtmlAttr($formId) ?>')"
-                  @submit.prevent="submitForm"
-            >
+                  x-data="initPasswordForm()"
+                  @submit.prevent="submitForm();">
                 <?= $block->getBlockHtml('formkey') ?>
                 <input type="hidden" name="formId" value="<?= $escaper->escapeHtmlAttr($formId) ?>"/>
                 <?= $block->getChildHtml('form_fields_before') ?>
@@ -60,28 +57,46 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                                    name="email"
                                    alt="email"
                                    id="email_address"
-                                   class="input__field input__field--outline bg-bg-500 px-5 py-4 "
+                                   class="input__field input__field--outline bg-bg-500 px-5 py-4"
                                    autocomplete="<?= $isAutocompleteEnabled ? 'username' : 'off' ?>"
                                    required
                                    value="<?= $escaper->escapeHtmlAttr($block->getEmailValue()) ?>">
                         </div>
                     </div>
-                    <p class="text-red-600 mt-2" x-show="errorMessages.username"
-                       x-text="errorMessages.username"></p>
+                    <?php if ($errorMessage): ?>
+                        <div class="text-red-600 mt-3" x-data="{ message: '<?= $escaper->escapeHtml($errorMessage) ?>' }" x-show="message">
+                            <p x-text="message"></p>
+                        </div>
+                    <?php endif; ?>
                     <?= $block->getChildHtml('form_additional_info') ?>
                     <?= $recaptcha ? $recaptcha->getLegalNoticeHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
                 </fieldset>
                 <div class="actions-toolbar">
                     <div class="primary">
                         <button type="submit" class="button button--filled-primary my-7 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
-                            <span><?= $escaper->escapeHtml(__('Submit')) ?></span>
+                            <span><?= $escaper->escapeHtml(__('Reset My Password')) ?></span>
                         </button>
                     </div>
                     <div class="w-full text-center text-md tracking-widest">
-                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>" x-element-transition-trigger><span><?= $escaper->escapeHtml(__('Cancel')) ?></span></a>
+                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>" x-element-transition-trigger>
+                            <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
+                        </a>
                     </div>
                 </div>
             </form>
+            <script>
+                function initPasswordForm() {
+                    return {
+                        errors: 0,
+                        hasCaptchaToken: 0,
+                        submitForm() {
+                            const $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
+                            <?= $recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
+                            $form.submit();
+                        }
+                    }
+                }
+            </script>
         </div>
     </div>
 </div>
