INTERNAL-46: Implement window.hyva.replaceDomElement in reset password page

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -64,7 +64,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                         </div>
                     </div>
                     <?php if ($errorMessage): ?>
-                        <div class="text-red-600 mt-3" x-data="{ message: '<?= $escaper->escapeHtml($errorMessage) ?>' }" x-show="message">
+                        <div class="text-red-600 mt-3"
+                             x-data="{ message: '<?= $escaper->escapeHtml($errorMessage) ?>' }" x-show="message">
                             <p x-text="message"></p>
                         </div>
                     <?php endif; ?>
@@ -73,12 +74,14 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 </fieldset>
                 <div class="actions-toolbar">
                     <div class="primary">
-                        <button type="submit" class="button button--filled-primary my-7 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
+                        <button type="submit"
+                                class="button button--filled-primary my-7 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
                             <span><?= $escaper->escapeHtml(__('Reset My Password')) ?></span>
                         </button>
                     </div>
                     <div class="w-full text-center text-md tracking-widest">
-                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>" x-element-transition-trigger>
+                        <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>"
+                           x-element-transition-trigger>
                             <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
                         </a>
                     </div>
@@ -87,16 +90,38 @@ $recaptcha = $block->getData('viewModelRecaptcha');
             <script>
                 function initPasswordForm() {
                     return {
-                        errors: 0,
                         hasCaptchaToken: 0,
                         submitForm() {
                             const $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
-                            <?= $recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
-                            $form.submit();
+
+                            const formData = new FormData($form);
+
+                            fetch($form.action, {
+                                method: 'POST',
+                                body: formData,
+                                headers: {
+                                    'X-Requested-With': 'XMLHttpRequest' // Optional if you want to handle it as an AJAX request
+                                }
+                            })
+                                .then(response => {
+                                    if (response.status === 302) {
+                                        window.location.href = '<?= $escaper->escapeJs($block->getLoginUrl()) ?>';
+                                    }
+
+                                    else {
+                                        return response.text().then(errorText => {
+                                            window.hyva.replaceDomElement('#<?= $escaper->escapeJs($formId) ?>', errorText);
+                                        });
+                                    }
+                                })
+                                .catch(error => {
+                                    console.error('Form submission failed:', error);
+                                });
                         }
                     }
                 }
             </script>
+
         </div>
     </div>
 </div>
