INTERNAL-46: Implement success message from session on login page

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -64,9 +64,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                         </div>
                     </div>
                     <?php if ($errorMessage): ?>
-                        <div class="text-red-600 mt-3"
-                             x-data="{ message: '<?= $escaper->escapeHtml($errorMessage) ?>' }" x-show="message">
-                            <p x-text="message"></p>
+                        <div class="text-red-600 mt-3">
+                            <?= $errorMessage ?>
                         </div>
                     <?php endif; ?>
                     <?= $block->getChildHtml('form_additional_info') ?>
