INTERNAL-46: Change styles in forgot password form

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/forgotpassword.phtml
@@ -29,7 +29,7 @@ $successMessage = $block->getSuccessMessage();
 $recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
-<div class="container mx-auto flex h-full items-center px-5 mt-16">
+<div class="container mx-auto flex h-full md:items-center px-5 mt-16">
     <div class="mx-auto mb-16 w-[412px] max-w-full">
         <div class="flex items-center w-full justify-center" aria-labelledby="block-customer-login-heading">
             <form action="<?= $escaper->escapeUrl($block->getUrl('*/*/forgotpasswordpost')) ?>"
@@ -44,7 +44,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_FORGOT_PASSWORD) : '' ?>
                 <fieldset class="fieldset">
                     <div class="text-center">
-                        <h2 class="mb-3 w-full text-2xl sm:mb-4"><?= __('Reset your password') ?></h2>
+                        <h2 class="text-left md:text-center mb-3 font-lg md:font-bold w-full text-xxl md:mb-4"><?= __('Reset your password') ?></h2>
                         <p class="mb-7 text-md text-text-500 sm:text-center"><?= __('We will send you an email to reset your password') ?></p>
                     </div>
                     <div class="field email required mt-6">
@@ -74,11 +74,11 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                 <div class="actions-toolbar">
                     <div class="primary">
                         <button type="submit"
-                                class="button button--filled-primary my-7 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
+                                class="button button--filled-primary mt-7 mb-6 w-full py-4" <?php if ($forgotPasswordButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>>
                             <span><?= $escaper->escapeHtml(__('Reset My Password')) ?></span>
                         </button>
                     </div>
-                    <div class="w-full text-center text-md tracking-widest">
+                    <div class="w-full text-center tracking-widest">
                         <a class="link link--primary" href="<?= $escaper->escapeUrl($block->getLoginUrl()) ?>"
                            x-element-transition-trigger>
                             <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
