--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -15,45 +15,62 @@ use Magento\LayeredNavigation\Block\Navigation\State;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 $filters = $block->getActiveFilters();
 
+$selectedSort = $block->getData('selected_sort') ?? [];
 ?>
 <div class="contents md:block md:px-2 md:pb-7 md:pt-2">
+
+    <!-- Desktop header -->
     <div class="mb-5 hidden items-center justify-between md:flex">
         <h2 class="text-text-500"><?= $escaper->escapeHtml(__('Selected filters')) ?></h2>
 
-        <?php if ($block->getLayer()->getState()->getFilters()): ?>
+        <?php if ($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
             <a href="<?= $escaper->escapeUrl($block->getClearUrl()) ?>" class="link link--primary" x-element-transition-trigger>
                 <?= $escaper->escapeHtml(__('Clear All')) ?>
             </a>
         <?php endif; ?>
     </div>
 
+
     <div class="flex md:flex-wrap gap-3 max-md:overflow-x-scroll max-md:pb-4 max-md:pt-2">
-        <?php if($block->getLayer()->getState()->getFilters()): ?>
+        <!-- Remove all on mobile -->
+        <?php if($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
             <a
                 aria-label="<?= $escaper->escapeHtmlAttr(__('Clear All')) ?>"
                 class="md:hidden button min-w-[44px] px-0 text-xl button--filled-primary opacity-100 h-[44px]"
-                href="<?= $escaper->escapeUrl($block->getClearUrl()) ?>"
-                x-element-transition-trigger
+                @click="clearAllFilters()"
             >
                 <span><?= $hyvaicons->renderHtml('remove'); ?></span>
             </a>
+        <?php endif; ?>
+
+        <?php if($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
+            <!-- Selected sort -->
+            <?php if(count($selectedSort)): ?>
+                <a
+                    @click="removeSort()"
+                    class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
+                    title="<?= $escaper->escapeHtmlAttr(__('Remove sort %1 by: %2', $selectedSort['name'], $selectedSort['dir'])) ?>"
+                >
+                    <span class="mr-2"><?= $escaper->escapeHtml(__($selectedSort['name'])) ?>:</span>
+                    <span><?= $escaper->escapeHtml($selectedSort['dir']) ?></span>
+                </a>
+            <?php endif; ?>
 
             <?php foreach ($filters as $filter): ?>
-            <?php
-                $filterName = $filter->getName();
-                $filterLabel = $block->stripTags($filter->getLabel());
-            ?>
-            <a
-                href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
-                class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
-                title="<?= /* @noEscape */ $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
-                x-element-transition-trigger
-            >
-                <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
-                <span><?= $escaper->escapeHtml($filterLabel) ?></span>
-            </a>
+                <?php
+                    $filterName = $filter->getName();
+                    $filterLabel = $block->stripTags($filter->getLabel());
+                ?>
+                <a
+                    href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
+                    class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
+                    title="<?= $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
+                    x-element-transition-trigger
+                >
+                    <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
+                    <span><?= $escaper->escapeHtml($filterLabel) ?></span>
+                </a>
             <?php endforeach; ?>
-            <div class="contents" id="mobile-available-filters"></div>
         <?php else: ?>
             <p class="pr-3 text-center md:pr-0 md:text-left max-md:hidden">
                 <?= $escaper->escapeHtml(__('The selected filters will appear here.')) ?>
@@ -61,6 +78,16 @@ $filters = $block->getActiveFilters();
         <?php endif; ?>
 
         <div class="contents md:hidden">
+            <?php if (!count($selectedSort)): ?>
+                <button
+                    type="button"
+                    class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base"
+                    @click="showFilters(false, 'Sort by')"
+                >
+                    <?= $escaper->escapeHtml(__('Sort by')) ?>
+                </button>
+            <?php endif; ?>
+
             <?php foreach ($block->getParentBlock()->getFilters() as $filter): ?>
                 <?php if ($filter->getItemsCount()): ?>
                     <button
