Fix empty filters in bottom filters popup

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/bottom-filters-popup.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/bottom-filters-popup.phtml
@@ -54,22 +54,24 @@ $selectedSort = $block->getData('selected_sort') ?? [];
                         <?php endif; ?>
 
                         <?php foreach ($filters as $filter): ?>
-                            <?php
-                                $filterName = $filter->getName();
-                                $filterLabel = $block->stripTags($filter->getLabel());
-                            ?>
-                            <a
-                                href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
-                                class="button button--outline-secondary button--size-sm shrink-0"
-                                title="<?= /* @noEscape */ $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
-                                x-element-transition-trigger
-                            >
-                                <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
-                                <span><?= $escaper->escapeHtml($filterLabel) ?></span>
-                                <span class="ml-3 text-lg">
-                                    <?= $hyvaicons->renderHtml('close'); ?>
-                                </span>
-                            </a>
+                            <?php if ($filter->getItemsCount()): ?>
+                                <?php
+                                    $filterName = $filter->getName();
+                                    $filterLabel = $block->stripTags($filter->getLabel());
+                                ?>
+                                <a
+                                    href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
+                                    class="button button--outline-secondary button--size-sm shrink-0"
+                                    title="<?= /* @noEscape */ $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
+                                    x-element-transition-trigger
+                                >
+                                    <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
+                                    <span><?= $escaper->escapeHtml($filterLabel) ?></span>
+                                    <span class="ml-3 text-lg">
+                                        <?= $hyvaicons->renderHtml('close'); ?>
+                                    </span>
+                                </a>
+                            <?php endif; ?>
                         <?php endforeach; ?>
                     </div>
                 <?php endif; ?>
